--- a/myproject/templates/main/profile.html
+++ b/myproject/templates/main/profile.html
@@ -24,7 +24,7 @@
 <div style="margin-bottom: 32px"
      class="table justify-content-between row p-3 text-dark bg-light border-top border-bottom">
 
-    <img class="col-4" src="{{ item.photo.url }}" alt="Фото заявки">
+    <img style="max-width: 500px" class="col-4" src="{{ item.photo.url }}" alt="Фото заявки">
     <p class="p-3 mb-2 mr-auto"><b>Наименование:</b> {{ item.name }} <br>
         <b>Категория:</b> {{ item.Category }}
         <br> <b>Дата добавления:</b> {{ item.date }} <br> <b>Описание:</b> {{ item.description }}
